JSW Devsb/src/objects/Delivery__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Delivery</relationshipLabel>
        <relationshipName>Delivery</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Batch__c</fullName>
        <label>Batch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_of_Lading__c</fullName>
        <label>Bill of Lading</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bun__c</fullName>
        <label>Bun</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Creation_DT__c</fullName>
        <label>CLM Creation DT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Number__c</fullName>
        <label>CLM Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLM_Time__c</fullName>
        <label>CLM Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Out_Formula__c</fullName>
        <formula>Check_Out__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Out_Time__c</fullName>
        <label>Check Out Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Out__c</fullName>
        <label>Check Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivered_Qty__c</fullName>
        <label>Delivery Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Creation_Date_Formula__c</fullName>
        <formula>Delivery_Creation_Date__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Creation_Date__c</fullName>
        <label>Delivery Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Creation_Time__c</fullName>
        <label>Delivery Creation Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_No__c</fullName>
        <externalId>true</externalId>
        <label>Delivery No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel_Name__c</fullName>
        <label>Distribution Channel Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division_Name__c</fullName>
        <label>Division Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>52</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Driver_Name__c</fullName>
        <label>Driver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driver_Number__c</fullName>
        <label>Driver Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Excise_Invoice_No__c</fullName>
        <label>Excise Invoice No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gate_Entry_Date_Formula__c</fullName>
        <formula>Gate_Entry_Date__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gate Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gate_Entry_Date__c</fullName>
        <label>Gate Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gate_Entry_Time__c</fullName>
        <label>Gate Entry Dt Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gate_Out_Formula__c</fullName>
        <formula>Gate_Out__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gate Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gate_Out_Time__c</fullName>
        <label>Gate Out Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gate_Out__c</fullName>
        <label>Gate Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gross_Wt_Date_Formula__c</fullName>
        <formula>Gross_Wt_Date__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Wt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gross_Wt_Date__c</fullName>
        <label>Gross Wt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gross_meassure_time__c</fullName>
        <label>Gross meassure time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_weight_Measure__c</fullName>
        <label>Gross weight Measure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Excise_Doc_No__c</fullName>
        <label>Internal Excise Doc No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Creation_Formula__c</fullName>
        <formula>Invoice_Creation__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Creation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Creation_Time__c</fullName>
        <label>Invoice Creation Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Creation__c</fullName>
        <label>Invoice Creation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Means_of_Trans_ID__c</fullName>
        <label>Means of Trans.ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Bags__c</fullName>
        <label>Number of Bags</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Booking</label>
        <referenceTo>Order_Request__c</referenceTo>
        <relationshipLabel>Delivery</relationshipLabel>
        <relationshipName>Delivery</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Packing_Out_Formula__c</fullName>
        <formula>Packing_Out__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packing Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Packing_Out_Time__c</fullName>
        <label>Packing Out Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packing_Out__c</fullName>
        <label>Packing Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiving_Plant__c</fullName>
        <label>Receiving Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_City_Code__c</fullName>
        <label>SH City Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Sales_District__c</fullName>
        <label>SH Sales District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_State__c</fullName>
        <label>SH State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Doc_Date_Formula__c</fullName>
        <formula>Sale_Doc_Date__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale Doc Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sale_Doc_Date__c</fullName>
        <label>Sale Doc Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sale_Doc_Time__c</fullName>
        <label>Sale Doc Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Order_Number__c</fullName>
        <label>Sale Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Doc__c</fullName>
        <label>Sales Doc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Orders__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Orders</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Delivery</relationshipLabel>
        <relationshipName>Delivery</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Party</label>
        <referenceTo>Ship_To_Party__c</referenceTo>
        <relationshipLabel>Delivery</relationshipLabel>
        <relationshipName>Delivery</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_to_Code__c</fullName>
        <label>Ship to Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_party_Name__c</fullName>
        <label>Ship to party Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Code__c</fullName>
        <label>Sold To Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Party_Name__c</fullName>
        <label>Sold To Party Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tare_Weight_Date_Formula__c</fullName>
        <formula>Tare_Weightt__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tare Weight Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tare_Weight_Time__c</fullName>
        <label>Tare Weight Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tare_Weight__c</fullName>
        <label>Tare Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tare_Weightt__c</fullName>
        <label>Tare Weight Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Truck_Number__c</fullName>
        <label>Truck Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Truck_Stage__c</fullName>
        <label>Truck Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yard_Entry_Time__c</fullName>
        <label>Yard Entry Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yard_Entry__c</fullName>
        <label>Yard Entry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Yard_Number__c</fullName>
        <label>Yard Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Delivery</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Delivery_No__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Delivery Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>